@@ -45,11 +45,32 @@ CicIpAddress1=1.2.3.4
 
 ; CicPort=<udp-port-num>
 ;
-; The UDP port number to which Content Insertion Cues should be forwarding.
+; The UDP port number to which Content Insertion Cues should be forwarded.
 ; This is a single value, which is used for all specified 'CicIpAddress<num>'
 ; destinations.
 ;
 CicPort=5001
+
+; NetcueUdpAddress<num>=<ipv4-addr>
+;
+; The IPv4 address to which netcues should be forwarded. Multiple addresses
+; can be specified by incrementing the <num> parameter.
+;
+NetcueIpAddress1=1.2.3.4
+
+; NetcueUdpPort-<udp-port-num>
+;
+; The UDP port number to which Netcues should be forwarded.
+; This is a single value, which is used for all specified
+; 'NetcueIpAddress<num>' destinations.
+;
+NetcueUdpPort=7001
+
+; NetcueUdpRepeat=<quan>
+;
+; Repeat each UDP netcue transmission <quan> times.
+;
+NetcueUdpRepeat=1
 
 ; NetcuePort=<tty-device>
 ;
