@@ -245,3 +245,6 @@
 2025-06-24 Fred Gleason <fredg@paravelsystems.com>
 	* Added a 'ForwardNetcueViaLivewire=' directive to the '[Global]'
 	section of lwnetrouter.conf(5).
+2025-06-25 Fred Gleason <fredg@paravelsystems.com>
+	* Added 'NetcueUdpAddress<n>=', 'NetcueUdpPort=' and
+	'NetcueUdpRepeat=' directives to lwnetrouter.conf(5).
